<resources>
    <string name="app_name">FitActivityTracker</string>
    <string name="action_delete_data">Delete requested data</string>
    <string name="unregister_fitness_datalisteners">Unregister Fitness DataListeners</string>
    <string name="action_settings">Settings</string>
    <string name="check_your_goal">Check Your Goal</string>
    <string name="num_steps">Number of Steps:</string>
    <string name="enter_here">Enter Here</string>
    <string name="calories_expended">Number of Calories Expended:</string>
    <string name="distance_delta">Distance Traveled (meters):</string>
    <string name="check_your_goal_for">Check Your Goal For:</string>
    <string name="activity_duration">Activity Duration (Goal): </string>
    <string name="minutes">Minutes</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="months">Months</string>
    <string name="years">Years</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="start_workout">Start Workout</string>
    <string name="end_workout">End Workout</string>
    <string name="action_dump_subs">List Active Subscriptions</string>
</resources>
